Fix display on mobile

--- a/docs/css/ls.css
+++ b/docs/css/ls.css
@@ -1,8 +1,8 @@
 body {
 	color: #2F3338;
 	background-color: #EFF0F1;
-  margin-left: 4em;
-  margin-right: 4em;
+  margin-left: 4%;
+  margin-right: 4%;
   font-family: sans-serif;
 }
 
